--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@
   --pages-color: linear-gradient(90deg, #222b33, #1b262c);
   --border: 0.125rem solid #00eeff; /* Border color using shades of #00eeff */
   --box-shadow: 0 0 0.6rem rgba(16, 21, 26, 0.2);
+  --col1: #05299e;
+  --col2: #5e4ae3;
+  --col3: #947bd3;
+  --col4: #ffb7ff;
+  --col5: #ff595e;
 }
 .services-content img {
   -webkit-filter: invert(100%);
@@ -37,7 +42,6 @@ body {
   zoom: 85%;
   margin: 3rem;
 }
-
 .wrapper {
   position: relative;
   width: 66rem;
@@ -77,19 +81,19 @@ body {
   height: 150%;
   width: 150%;
   background: linear-gradient(
-    #001e24,  
+    #001e24,
     #003d48,
     #005d70,
     #007e97,
     #009ebf,
     #00bfd6,
     #00dfe9,
-    #00f1ff, 
-    #00e4f8, 
-    #00d6f1,  
-    #00c9ea, 
-    #00bbd3,  
-    #00aebc   
+    #00f1ff,
+    #00e4f8,
+    #00d6f1,
+    #00c9ea,
+    #00bbd3,
+    #00aebc
   );
   left: -25%;
   top: -25%;
@@ -471,7 +475,6 @@ body {
   transform: translateX(-50%) scale(1);
   top: -1.8rem;
 }
-
 @keyframes pulseScale {
   0% {
     transform: scale(0.5); /* Start small */
@@ -485,9 +488,7 @@ body {
     transform: scale(1); /* Return to the original size */
     opacity: 1; /* End with full opacity (visible) */
   }
-}
-
-/* Apply the animation to the header */
+} /* Apply the animation to the header */
 .header {
   position: fixed;
   top: 0;
@@ -504,13 +505,11 @@ body {
   animation-fill-mode: both;
   animation-delay: 0.5s; /* Delay the animation for 0.5 seconds */
 }
-
 nav {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   border-radius: 50px !important;
   padding: 0 40px !important;
 }
-
 a.nav-link {
   margin: 10px;
   padding: 10px 20px !important;
@@ -520,39 +519,32 @@ a.nav-link {
   position: relative;
   transition: color 0.3s, box-shadow 0.3s; /* Add transitions for text color and box shadow */
 }
-
 a.nav-link:hover {
   color: #ffffff; /* Change text color to bright white on hover */
   background: #00a7c3; /* Set the background color to cyan on hover */
   box-shadow: 0 0 10px 5px #00a7c3; /* Add a glow box shadow with cyan color */
   border: 2px solid #00a7c3; /* Add a glowing border */
 }
-
 .navbar-toggler {
   outline: none;
   border: none;
   box-shadow: none;
 }
-
 .navbar-toggler:active {
   outline: none;
   border: none;
 }
-
 .navbar-toggler:focus {
   outline: none;
   border: none;
   box-shadow: none;
 }
-
 .navbar-toggler img {
   transition: width 0.15s ease-in-out;
 }
-
 .navbar-toggler.clicked img {
   width: 75px;
 }
-
 .side-content {
   background: transparent;
   text-align: right;
@@ -571,12 +563,11 @@ a.nav-link:hover {
   line-height: 1.5;
 }
 
-.side-content p{
-  font-size:25px;
+.side-content p {
+  font-size: 25px;
   text-align: justify;
   text-justify: inter-word;
 }
-
 
 /* Add animation for text appearance effect */
 @keyframes sideTextAnimation {
@@ -589,6 +580,3 @@ a.nav-link:hover {
     transform: translateX(0);
   }
 }
-
-
-
