--- a/style.css
+++ b/style.css
@@ -569,14 +569,14 @@ a.nav-link:hover {
   text-justify: inter-word;
 }
 
-/* Add animation for text appearance effect */
-@keyframes sideTextAnimation {
+
+@keyframes textSwiftUpAnimation {
   0% {
     opacity: 0;
-    transform: translateX(20px);
+    transform: translateY(20px);
   }
   100% {
     opacity: 1;
-    transform: translateX(0);
+    transform: translateY(0);
   }
 }
