--- a/style.css
+++ b/style.css
@@ -558,7 +558,7 @@ a.nav-link:hover {
   opacity: 0;
   padding: 1rem 10%;
   transform: translateX(20px);
-  animation: sideTextAnimation 2s ease-in-out forwards 0.5s, textSwiftUpAnimation 1s ease-in-out forwards 2.5s;
+  animation: sideTextAnimation 2s ease-in-out forwards 0.5s, textFloatingAnimation 5s ease-in-out infinite 2.5s;
   white-space: normal;
   line-height: 1.5;
 }
@@ -569,7 +569,6 @@ a.nav-link:hover {
   text-justify: inter-word;
 }
 
-
 @keyframes textSwiftUpAnimation {
   0% {
     opacity: 0;
@@ -578,5 +577,14 @@ a.nav-link:hover {
   100% {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@keyframes textFloatingAnimation {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
   }
 }
